2003-06-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-makeinfo): Encode messages to terminal while
	formatting info pages.

2003-06-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-sourceforge-jp.el: New backend.

	* shimbun/shimbun.el (shimbun-footer): Insert docstring to aboid
	the bug of XEmacs's byte compiler.

	* shimbun/sb-w3m-dev.el (shimbun-reply-to): Insert docstring to
	aboid the bug of XEmacs's byte compiler.

2003-06-17  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-rss.el (shimbun-get-headers): Remove unnecessary
	temporary variables STIME, ST, BODY, AUTHOR, EXTRA, RDF-NS and
	CONTENT-NS.
	(shimbun-rss-get-namespace-prefix): Add doc string.

2003-06-17  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-asahi.el (shimbun-server-name): Removed.
	(shimbun-from-address): Removed.
	(initialize-instance): Initialize `server-name', `from-address',
	`x-face-alist' and `expiration-days'.

	* shimbun/sb-asahi-html.el (shimbun-asahi-html-x-face-alist):
	(shimbun-asahi-html-expiration-days): Abolished.

	* shimbun/sb-yomiuri.el (shimbun-server-name): Removed.
	(shimbun-from-address): Removed.
	(initialize-instance): Initialize `server-name', `from-address',
	`x-face-alist' and `expiration-days'.

	* shimbun/sb-yomiuri-html.el (shimbun-yomiuri-html-x-face-alist):
	(shimbun-yomiuri-html-expiration-days): Abolished.

2003-06-17  NAKAJIMA Mikio  <minakaji@namazu.org>

	* shimbun/sb-rss.el (shimbun-rss-process-date): Handle UTC
	timezone.

2003-06-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei): Make it inherit `shimbun'
	which was missed.

	* shimbun/shimbun.el: Changes to consider `coding-system' slot of
	SHIMBUN class.
	(shimbun-fetch-url): New function.
	(shimbun-make-mime-article, shimbun-headers, shimbun-article):
	Call `shimbun-fetch-url' instead of `shimbun-retrieve-url'.

	* shimbun/sb-w3m-dev.el (shimbun-get-headers, shimbun-article):
	Removed.
